Uradjena serijalizacija podataka na masteru, Napravljena dva listenSocketa za servere i klijente, Napravljena dva treda jedan za prihvatanje zahteva i upis u kruzni bafer i druga za citanje iz bafera

--- a/IKP_Projekat/Server/Server.vcxproj.filters
+++ b/IKP_Projekat/Server/Server.vcxproj.filters
@@ -19,4 +19,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Metode_servera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Niti.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Kruzni_bafer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
