--- a/IKP_Projekat/Server/Server.vcxproj
+++ b/IKP_Projekat/Server/Server.vcxproj
@@ -126,6 +126,11 @@
   <ItemGroup>
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Kruzni_bafer.h" />
+    <ClInclude Include="Metode_servera.h" />
+    <ClInclude Include="Niti.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
