Na serveru dodata lista za cuvanje podataka o drugim serverima; Implementirano pokretanje treda za svaki server u sistemu

--- a/IKP_Projekat/Server/Server.vcxproj
+++ b/IKP_Projekat/Server/Server.vcxproj
@@ -76,6 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,6 +131,7 @@
     <ClInclude Include="Kruzni_bafer.h" />
     <ClInclude Include="Metode_servera.h" />
     <ClInclude Include="Niti.h" />
+    <ClInclude Include="Struktura_Server_info.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
