--- a/IKP_Projekat/Server/Server.vcxproj.filters
+++ b/IKP_Projekat/Server/Server.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Struktura_Server_info.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Struktura_memorija.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
